fixed the font color so it's readable in my cards

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -20,4 +20,7 @@
   font-size: large;
 }
 
-
+.card {
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
